fixed lab hours so that the full week is viewable on mobile, moved lab hours to a separate include file to reduce code duplication, and added .swp files to gitignore for developers using vim

--- a/public/css/lab.css
+++ b/public/css/lab.css
@@ -90,16 +90,7 @@ tr#top {
   background-color: #00629b;
   color: white;
 }
-.table2 {
-  display: none;
-}
 @media (max-width: 1052px) {
-  .table1 {
-    display: none;
-  }
-  .table2 {
-    display: block;
-  }
   th,
   td {
     font-size: 15px;
